FIX: Header z-index

--- a/src/app/elements/header/header.component.scss
+++ b/src/app/elements/header/header.component.scss
@@ -10,6 +10,7 @@ $search-box-radius: 20px ;
   right: 0;
   left: 0;
   background: white;
+  z-index: 1000;
 }
 header{
 
